--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="square game"
-      content="Web site created using create-react-app"
-    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +18,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Gamified</title>
+    <!--
+      This game uses references and modified the following source codes:
+      - React-jigsaw-puzzle by Yuri Becker, available at: 
+      - Doodle Jump by available at:
+
+    -->
+    <title>Gamified Rehab</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
